--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -57,7 +57,7 @@ header p {
   div {
       margin-top: 10px;
   }
-} Social links aligned vertically on the left side
+}
 .social-links-vertical {
   display: flex;
   flex-direction: column;
