--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,26 +32,11 @@
                   <a href="https://github.com/jmajety-dev" target="_blank" class="github">
                       <i class="fab fa-github fa-2x"></i> GitHub
                   </a>
-                  <a href="https://instagram.com/YOUR_INSTAGRAM_PROFILE" target="_blank" class="instagram">
+                  <a href="https://instagram.com/jiteshmajety" target="_blank" class="instagram">
                       <i class="fab fa-instagram fa-2x"></i> Instagram
                   </a>
               </div>
           </div>                   
-              <!-- Right Side: Certifications Section -->
-          <div class="certifications" style="max-width: 50%; text-align: right;">
-          <h3>Certifications</h3>
-
-          <!-- AWS Certified Developer -->
-          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="bd0a5181-9ed3-4301-a913-1e6b34c9f91c" data-share-badge-host="https://www.credly.com"></div>
-
-          <!-- IBM Certified Data Science Professional -->
-          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7e44a12f-55dc-4c7c-8c9f-7499f10aff2c" data-share-badge-host="https://www.credly.com"></div>
-
-          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c8190f7e-be3a-4dbb-b7b8-e7726f8b36df" data-share-badge-host="https://www.credly.com"></div>
-          </div>
-  
-            <!-- Include the Credly script only once -->
-            <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 
             {% if site.github.is_project_page %}
             <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
