--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,16 @@
             {% endif %}
             <div class="bio-section">
               <p>{{ site.description | default: site.github.project_tagline }}</p>
-          
+                  <!-- Vertical Navigation Bar for In-page Links -->
+                <nav class="vertical-nav">
+                  <ul>
+                      <li><a href="#about-me">About Me</a></li>
+                      <li><a href="#skills">Skills & Qualifications</a></li>
+                      <li><a href="#work-experience">Work Experience</a></li>
+                      <li><a href="#projects">Projects</a></li>
+                      <li><a href="#education">Education</a></li>
+                  </ul>
+              </nav>
               <!-- Social Links Vertically Aligned -->
               <div class="social-links-vertical">
                   <a href="https://www.linkedin.com/in/jitesh-majety/" target="_blank" class="linkedin">
