--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: #121212; // Dark background
+  background-color: #1d1d1d; // Dark background
   color: #e0e0e0; // Light gray text
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", "Helvetica, Arial", "sans-serif";
@@ -116,7 +116,7 @@ header p {
 
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#f5f5f5;
   margin:0 0 20px;
 }
 
@@ -276,7 +276,7 @@ ul.downloads {
 }
 
 strong {
-  color:#222;
+  color:#bb86fc;
   font-weight:700;
 }
 
