--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: #1d1d1d; // Dark background
+  background-color: #151515; // Dark background
   color: #e0e0e0; // Light gray text
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", "Helvetica, Arial", "sans-serif";
@@ -116,7 +116,7 @@ header p {
 
 
 h1, h2, h3, h4, h5, h6 {
-  color:#f5f5f5;
+  color:#f5f5f5ef;
   margin:0 0 20px;
 }
 
@@ -137,7 +137,7 @@ h2 {
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+  color:#ededed;
 }
 
 a {
