--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -74,7 +74,28 @@ header p {
       &:hover {
         color: #d0a8ff;
       }
+
+      &.active { // Highlight current section
+        font-size: 1.2rem; // Slightly larger font size for active section
+        font-weight: bold;
+        color: #ffffff; // White color for the active section link
+    }
   }
+}
+
+// Skills & Qualifications: Change bullet points to dashes
+.skills-list li::before {
+  content: "– "; // Replace bullet point with a dash
+  font-size: 1.1em; // Slightly larger dash for emphasis
+  color: #bb86fc; // Purple to match theme
+  margin-right: 5px;
+}
+
+// Make sure each section in the left nav has a suitable identifier
+.skills-list{
+  list-style-type: none; // Remove default bullet styling
+  padding: 0;
+  margin: 0;
 }
 
 .social-links-vertical {
@@ -101,7 +122,7 @@ header p {
       }
 
       &.github {
-          color: #333;
+          color: #e8e8e8;
       }
 
       &.instagram {
