--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,5 +76,29 @@
         </footer> -->
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+          const sections = document.querySelectorAll("section");
+          const navLinks = document.querySelectorAll(".vertical-nav a");
+  
+          window.addEventListener("scroll", () => {
+              let current = "";
+  
+              sections.forEach(section => {
+                  const sectionTop = section.offsetTop;
+                  if (pageYOffset >= sectionTop - 60) {
+                      current = section.getAttribute("id");
+                  }
+              });
+  
+              navLinks.forEach(link => {
+                  link.classList.remove("active");
+                  if (link.getAttribute("href").includes(current)) {
+                      link.classList.add("active");
+                  }
+              });
+          });
+      });
+  </script>  
 </body>
 </html>
