--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
                       <li><a href="#work-experience">Work Experience</a></li>
                       <li><a href="#projects">Projects</a></li>
                       <li><a href="#education">Education</a></li>
+                      <li><a href="#technical">Technical Skills</a></li>
+                      <!-- <li><a href="#contact">Contact</a></li> -->
                   </ul>
               </nav>
               <!-- Social Links Vertically Aligned -->
