--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,13 +36,16 @@
                   </ul>
               </nav>
               <!-- Social Links Vertically Aligned -->
-              <div class="social-links-vertical">
-                  <a href="https://www.linkedin.com/in/jitesh-majety/" target="_blank" class="linkedin">
-                      <i class="fab fa-linkedin fa-2x"></i> LinkedIn
-                  </a>
-                  <a href="https://github.com/jmajety-dev" target="_blank" class="github">
-                      <i class="fab fa-github fa-2x"></i> GitHub
-                  </a>
+              <div class="social-icons" style="display: flex; gap: 15px; margin-top: 20px;">
+                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Resume">
+                    <i class="fas fa-file-alt" style="font-size: 2em; color: #6c63ff;"></i>
+                </a>
+                <a href="https://linkedin.com/in/jitesh-majety" target="_blank" title="LinkedIn">
+                    <i class="fab fa-linkedin" style="font-size: 2em; color: #0A66C2;"></i>
+                </a>
+                <a href="https://github.com/jmajety-dev" target="_blank" title="GitHub">
+                    <i class="fab fa-github" style="font-size: 2em; color: #dbd5d5;"></i>
+                </a>
                   <a href="https://instagram.com/jiteshmajety" target="_blank" class="instagram">
                       <i class="fab fa-instagram fa-2x"></i> Instagram
                   </a>
