--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,8 @@
                 </a>
                 <a href="https://github.com/jmajety-dev" target="_blank" title="GitHub">
                     <i class="fab fa-github" style="font-size: 2em; color: #dbd5d5;"></i>
-                </a>
-                  <a href="https://instagram.com/jiteshmajety" target="_blank" class="instagram">
-                      <i class="fab fa-instagram fa-2x"></i> Instagram
+                <a href="https://instagram.com/jiteshmajety" target="_blank" title="Instagram">
+                      <i class="fab fa-instagram" style="font-size: 2em; color: #E1306C;"></i>
                   </a>
               </div>
           </div>                   
