--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,18 +37,27 @@
               </nav>
               <!-- Social Links Vertically Aligned -->
               <div class="social-icons" style="display: flex; gap: 15px; margin-top: 20px;">
-                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Resume">
-                    <i class="fas fa-file-alt" style="font-size: 2em; color: #6c63ff;"></i>
+                <!-- Resume Icon -->
+                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Download Resume">
+                    <i class="fas fa-download" style="font-size: 2em; color: #FF5722;"></i> <!-- Using download icon for better clarity -->
                 </a>
+                
+                <!-- LinkedIn Icon -->
                 <a href="https://linkedin.com/in/jitesh-majety" target="_blank" title="LinkedIn">
                     <i class="fab fa-linkedin" style="font-size: 2em; color: #0A66C2;"></i>
                 </a>
+                
+                <!-- GitHub Icon -->
                 <a href="https://github.com/jmajety-dev" target="_blank" title="GitHub">
                     <i class="fab fa-github" style="font-size: 2em; color: #dbd5d5;"></i>
-                <a href="https://instagram.com/jiteshmajety" target="_blank" title="Instagram">
-                      <i class="fab fa-instagram" style="font-size: 2em; color: #E1306C;"></i>
-                  </a>
-              </div>
+                </a>
+                
+                <!-- Instagram Icon -->
+                <a href="https://instagram.com/your-instagram" target="_blank" title="Instagram">
+                    <i class="fab fa-instagram" style="font-size: 2em; color: #E1306C;"></i>
+                </a>
+            </div>
+            
           </div>                   
 
             {% if site.github.is_project_page %}
