--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,7 @@
                       <!-- <li><a href="#contact">Contact</a></li> -->
                   </ul>
               </nav>
-              <!-- Social Links Vertically Aligned -->
-              <div class="social-icons" style="display: flex; gap: 15px; margin-top: 20px;">
-                <!-- Resume Icon -->
-                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Download Resume">
-                    <i class="fas fa-download" style="font-size: 2em; color: #FF5722;"></i> <!-- Using download icon for better clarity -->
-                </a>
+              <div class="social-icons" style="display: flex; flex-direction: column; align-items: flex-start; gap: 15px; margin-top: 20px;">
                 
                 <!-- LinkedIn Icon -->
                 <a href="https://linkedin.com/in/jitesh-majety" target="_blank" title="LinkedIn">
@@ -53,8 +48,13 @@
                 </a>
                 
                 <!-- Instagram Icon -->
-                <a href="https://instagram.com/your-instagram" target="_blank" title="Instagram">
+                <a href="https://instagram.com/jiteshmajety" target="_blank" title="Instagram">
                     <i class="fab fa-instagram" style="font-size: 2em; color: #E1306C;"></i>
+                </a>
+
+                <!-- Resume Icon -->
+                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Resume">
+                    <i class="fas fa-file-pdf" style="font-size: 2em; color: #FF5722;"></i> <!-- File PDF icon for Resume -->
                 </a>
             </div>
             
