--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
                       <!-- <li><a href="#contact">Contact</a></li> -->
                   </ul>
               </nav>
-              <div class="social-icons" style="display: flex; flex-direction: column; align-items: flex-start; gap: 15px; margin-top: 20px;">
+              <div class="social-icons" style="display: flex; align-items: flex-start; gap: 15px; margin-top: 20px;">
                 
                 <!-- LinkedIn Icon -->
                 <a href="https://linkedin.com/in/jitesh-majety" target="_blank" title="LinkedIn">
