--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,8 @@
                     <i class="fas fa-file-pdf" style="font-size: 2em; color: #FF5722;"></i> <!-- File PDF icon for Resume -->
                 </a>
             </div>
-            
-          </div>                   
+            <h1 style="margin-top: 20px;">Jitesh Majety</h1>
+            </div>                  
 
             {% if site.github.is_project_page %}
             <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
