--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,11 +49,11 @@
                     <i class="fab fa-instagram" style="font-size: 2em; color: #E1306C;"></i>
                 </a>
                 <!-- Resume Icon -->
-                <a href="https://drive.google.com/file/d/10UBI3R8UvKxL5eEExIsqVDl5gbBxOtnQ/view?usp=sharing" target="_blank" title="Resume">
+                <a href="https://drive.google.com/file/d/1tr4Mb-mkbfjkZyLMaSJjBFZYQc0J3wyV/view?usp=sharing" target="_blank" title="Resume">
                     <i class="fas fa-file-pdf" style="font-size: 2em; color: #FF5722;"></i> <!-- File PDF icon for Resume -->
                 </a>
             </div>
-            <h1 style="margin-top: 20px;">Jitesh Majety</h1>
+            <h1 style="margin-top: 10px;"></h1>
             </div>                  
 
             {% if site.github.is_project_page %}
