--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                 </a>
                 <!-- Resume Icon -->
                 <a href="https://drive.google.com/file/d/1Zz0QopdypE4VNzYyY2JRTQwrmVSA5eNA/view?usp=sharing" target="_blank" title="Resume">
-                    <i class="fas fa-file-pdf" style="font-size: 2em; color: #FF5722;"></i> <!-- File PDF icon for Resume -->
+                    <i class="fas fa-file-pdf" style="font-size: 2em; color: #FF5722;"></i>
                 </a>
             </div>
             <h1 style="margin-top: 10px;"></h1>
