--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -320,7 +320,7 @@ footer {
 }
 
 // Professional resume-style section dividers
-section h2 {
+section h2:before {
   content: "";
   display: block;
   width: 50px;
