--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -323,6 +323,7 @@ footer {
 section h2:before {
   content: "";
   display: block;
+  width: 50px;
   height: 3px;
   background: #1976D2;
   margin-bottom: 10px;
